--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,18 @@
             <artifactId>h2</artifactId>
             <version>1.4.197</version>
         </dependency>
+
         <!--数据库的连接池（目的：提高数据库的访问效率）-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
         </dependency>
 
     </dependencies>
